--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,9 @@
 token.secret = 1100!Kr2507
+
 url.login=/users/login
+
+api.login.url.path = /users-ws/login
+api.register.url.path = /users-ws/users
+
+authorization.token.header.name = Authorization
+authorization.token.header.prefix = Bearer
