--- a/application.properties
+++ b/application.properties
@@ -7,3 +7,5 @@ api.register.url.path = /users-ws/users
 
 authorization.token.header.name = Authorization
 authorization.token.header.prefix = Bearer
+
+test = test
