--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-token.secret = 1100!Kr2507
+token.secret = 1100!Kr2507aaa
 
 url.login=/users/login
 
@@ -7,5 +7,3 @@ api.register.url.path = /users-ws/users
 
 authorization.token.header.name = Authorization
 authorization.token.header.prefix = Bearer
-
-test = test
